# coursework

./: README.md  cowplot.py  func1.py  func2.py  main_cow.py  main_cow_outputFile.py  project_one.py  text.py
0831_bash_script/: do_full_backup.sh
0907_python_practice/: text.py
0921_classes_practice/: class_project.py  test_class.py
1003_mcs_random/: random_practice.py
1012_mcs_circle/: mcs_circle_pi.py  mcs_ellipse.py
1024_minima_optimization/: rosen.py
1031_data_optimization/: opti_data.py
1107_mcmc/: mcmc_practice.py  posterior.py
group_work/: func1.py  main_cow.py
project_one/: README.md  integral_solver.py  main_script.py  ode_solver.py
project_three/: main.py
project_two/: README.md  final_state.py  interaction_plots.py  mcs_project_main.py  trajectory.py
project_two/mcs_neutrino_package/: LICENSE  README.md  pyproject.toml
project_two/mcs_neutrino_package/src/neutrino_simulation/: final_state.py  mcs_project_main.py  trajectory.py
project_two/mcs_neutrino_package/src/neutrino_simulation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
project_two/mcs_neutrino_package/tests/: neutrinodata.csv
