[project]
name = "mcs_neutrino_package"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "statistics",
    "math",
    "matplotlib",
    "csv"
]
authors = [
    { name="Zae Moore", email="emoore06@syr.edu"}
    { name="Andrew Dowling", email="ajdowlin@syr.edu"}
]
description = "A monte carlo simulation package that simulates neutrinos interacting with Argon"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ZaeMoore/coursework/tree/master/project_two"